--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Styleexa.css">
+    <link rel="stylesheet" href="styleexa.css">
     <title>login examen</title>
 </head>
 <body>
